--- a/index.html
+++ b/index.html
@@ -191,24 +191,24 @@
       <h1 class="color-gray-dark font-24" style="opacity: 0;">
        Charlier
       </h1>
-      <h1 class="color-white finley-animated-heading" style="font-size: 4rem; font-weight: bold; margin: 15px 0 10px">
+      <h1 class="color-white finley-animated-heading" style="font-size: 5.8rem; font-weight: 900; margin: 20px 0 15px; letter-spacing: -0.06em; line-height: 0.75; font-family: 'Roboto', sans-serif; color: #ffffff; text-shadow: 0 0 20px rgba(0,0,0,0.8), 0 4px 8px rgba(0,0,0,0.9), 0 0 40px rgba(0,100,200,0.3); text-stroke: 1px rgba(0,0,0,0.3); -webkit-text-stroke: 1px rgba(0,0,0,0.3);">
        <span>
         F
        </span>
        <span>
-        i
+        I
        </span>
        <span>
-        n
+        N
        </span>
        <span>
-        l
+        L
        </span>
        <span>
-        e
+        E
        </span>
        <span>
-        y
+        Y
        </span>
       </h1>
       <p class="color-white pt-2 pb-2 fade-in-club-name" style="opacity: 0;">
