feat: update logo styling and modify animation color for enhanced visual consistency

--- a/code (4).html
+++ b/code (4).html
@@ -225,7 +225,7 @@
             <div id="mode-specific-settings">
                 <div id="automatic-settings-panel" class="settings-grid">
                     <div class="control-group" id="control-group-interval"><label for="interval-select">Interval (ms)</label><select id="interval-select"><option value="250">250</option><option value="500">500</option><option value="750">750</option><option value="1000" selected>1000</option><option value="1250">1250</option><option value="1500">1500</option></select></div>
-                    <div class="control-group" id="control-group-duration"><label for="session-duration">Duration (s)</label><input type="number" id="session-duration" value="30" min="5" step="5"></div>
+                    <div class="control-group" id="control-group-duration"><label for="session-duration">Duration (s)</label><select id="session-duration"><option value="5">5s</option><option value="10">10s</option><option value="15">15s</option><option value="20">20s</option><option value="25">25s</option><option value="30" selected>30s</option></select></div>
                 </div>
                 <div id="interactive-settings-panel" class="settings-grid hidden">
                      <div class="control-group" id="control-group-cards"><label for="card-amount-input">Cards to Press</label><input type="number" id="card-amount-input" value="10" min="5" step="1"></div>
