--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               width: 100%;
             ">
       <div class="logo-container" style="opacity: 0; margin-bottom: 15px;">
-       <img src="images/logos/h03-logo(9).png" alt="H03 Logo" class="club-logo" style="height: 100px; width: auto; filter: brightness(1.2) contrast(1.1) drop-shadow(0 2px 4px rgba(0,0,0,0.6)) drop-shadow(0 0 12px rgba(0,0,0,0.4)) drop-shadow(0 0 20px rgba(0,100,200,0.15));">
+       <img src="images/logos/h03-logo(9).png" alt="H03 Logo" class="club-logo" style="height: 100px; width: auto; filter: brightness(1.2) contrast(1.1) drop-shadow(0 2px 4px rgba(0,0,0,0.6)) drop-shadow(0 0 12px rgba(0,0,0,0.4)) drop-shadow(0 0 20px rgba(0,100,200,0.15)) drop-shadow(0 0 8px rgba(255,255,255,0.08));">
       </div>
       <h1 class="color-white finley-animated-heading" style="font-size: 5.8rem; font-weight: 900; margin: 20px 0 15px; letter-spacing: -0.06em; line-height: 0.75; font-family: 'Roboto', sans-serif; color: #ffffff; text-shadow: 0 0 20px rgba(0,0,0,0.8), 0 4px 8px rgba(0,0,0,0.9), 0 0 40px rgba(0,100,200,0.3); text-stroke: 1px rgba(0,0,0,0.3); -webkit-text-stroke: 1px rgba(0,0,0,0.3);">
        <span>
