feat: refactor HTML structure and improve styling for consistency across components

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <a href="#" data-toggle-theme class="header-icon header-icon-4"
       ><i class="fas fa-lightbulb"></i
     ></a>
+    <a href="#" data-menu="menu-settings" class="header-icon header-icon-3"
+      ><i class="fa fa-cog"></i
+    ></a>
    </div>
 
    <div class="footer-bar-1" id="footer-bar">
@@ -73,7 +76,7 @@
      </span>
     </a>
     <a class="active-nav" href="index.html">
-     <i class="fa fa-home">
+     <i class="fa fa-home" style="font-size: 1.3em;">
      </i>
      <span>
       Home
@@ -86,13 +89,13 @@
       Videos
      </span>
     </a>
-    <a data-menu="menu-settings" href="#">
-     <i class="fa fa-cog">
-     </i>
-     <span>
-      Settings
-     </span>
-    </a>
+         <a href="page-tools.html">
+      <i class="fa fa-tools">
+      </i>
+      <span>
+       Tools
+      </span>
+     </a>
    </div>
     <div class="card mb-0" data-card-height="cover" id="video-swiper" style="position: relative; overflow: hidden">
      <!-- Background Image Slides -->
