--- a/code(2).html
+++ b/code(2).html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,311 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-
-      /* --- Component Styles --- */
-      #reaction-trainer-component {
-        font-family:
-          'Exo 2',
-          -apple-system,
-          BlinkMacSystemFont,
-          'Segoe UI',
-          Roboto,
-          Helvetica,
-          Arial,
-          sans-serif;
-        background-color: #f0f2f5;
-        padding: 2vw;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        width: 95%;
-        max-width: 600px;
-        margin: 20px auto;
-        text-align: center;
-        border: 1px solid #ddd;
-      }
-
-      #reaction-trainer-component h2 {
-        margin-top: 0;
-        font-size: clamp(1.5rem, 5vw, 2rem);
-        color: #1c1e21;
-        font-weight: 700;
-      }
-
-      .trainer-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
-        margin: 20px 0;
-      }
-
-      .trainer-square {
-        width: 100%;
-        padding-top: 100%;
-        position: relative;
-        border-radius: 12px;
-        background-color: #4a4a4a;
-        transition: all 0.2s ease;
-        cursor: pointer;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-
-      .trainer-square.active {
-        transform: scale(1.05);
-        box-shadow: 0 0 20px 5px currentColor;
-      }
-
-      .trainer-square .number {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: clamp(2.5em, 10vw, 4em);
-        font-weight: 700;
-        color: rgba(255, 255, 255, 0.9);
-        user-select: none;
-        transition: top 0.2s ease;
-      }
-
-      .trainer-square.active .number {
-        top: 45%;
-      }
-
-      .trainer-square .reaction-time-display {
-        display: none;
-        position: absolute;
-        bottom: 15px;
-        left: 50%;
-        transform: translateX(-50%);
-        font-size: clamp(1rem, 3vw, 1.2rem);
-        font-weight: 500;
-        color: rgba(255, 255, 255, 0.95);
-        background-color: rgba(0, 0, 0, 0.3);
-        padding: 3px 8px;
-        border-radius: 4px;
-        font-variant-numeric: tabular-nums;
-      }
-
-      .trainer-square.active .reaction-time-display {
-        display: block;
-      }
-
-      .trainer-square[data-number='1'].active {
-        background-color: #ffcc00;
-        color: #ffcc00;
-      }
-      .trainer-square[data-number='2'].active {
-        background-color: #ff3b30;
-        color: #ff3b30;
-      }
-      .trainer-square[data-number='3'].active {
-        background-color: #007aff;
-        color: #007aff;
-      }
-      .trainer-square[data-number='4'].active {
-        background-color: #34c759;
-        color: #34c759;
-      }
-
-      .settings-container {
-        margin-top: 20px;
-        padding: 15px;
-        background-color: #fff;
-        border-radius: 8px;
-      }
-
-      .mode-selection-area {
-        display: flex;
-        justify-content: center;
-      }
-      .mode-selection-area .control-group {
-        width: 100%;
-        max-width: 300px;
-      }
-
-      .divider {
-        border: none;
-        border-top: 1px solid #ddd;
-        margin: 15px 0;
-      }
-
-      .settings-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-        gap: 15px;
-      }
-
-      .control-group {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .control-group label {
-        font-size: clamp(0.8rem, 2.5vw, 0.9rem);
-        color: #606770;
-        margin-bottom: 5px;
-        font-weight: 500;
-      }
-      .settings-container input,
-      .settings-container select {
-        padding: 10px 14px;
-        border-radius: 6px;
-        border: 1px solid #ccc;
-        font-size: clamp(0.9rem, 3vw, 1rem);
-        background-color: #f5f6f7;
-        width: 100%;
-        box-sizing: border-box;
-        font-family: 'Exo 2', sans-serif;
-      }
-
-      .trainer-buttons {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        width: 100%;
-        justify-content: center;
-        margin-top: 10px;
-      }
-      .trainer-buttons button {
-        padding: 12px 24px;
-        font-size: clamp(1rem, 3.5vw, 1.1rem);
-        font-weight: 700;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition:
-          background-color 0.2s ease,
-          transform 0.1s ease;
-        flex-grow: 1;
-        max-width: 200px;
-      }
-      .trainer-buttons button:active {
-        transform: scale(0.98);
-      }
-      #start-btn {
-        background-color: #28a745;
-        color: white;
-      }
-      #start-btn:disabled {
-        background-color: #94d3a2;
-        cursor: not-allowed;
-      }
-      #stop-btn {
-        background-color: #dc3545;
-        color: white;
-      }
-      #stop-btn:disabled {
-        background-color: #f1a2ab;
-        cursor: not-allowed;
-      }
-      #shuffle-btn {
-        background-color: #5856d6;
-        color: white;
-        flex-basis: 100%;
-        margin-top: 10px;
-        max-width: 410px;
-      }
-      #shuffle-btn:disabled {
-        background-color: #c9c8f4;
-        cursor: not-allowed;
-      }
-
-      .trainer-display {
-        margin: 20px 0;
-        padding: 15px;
-        background-color: #fff;
-        border-radius: 8px;
-      }
-      #main-display {
-        font-size: clamp(2rem, 8vw, 3rem);
-        font-weight: 700;
-        color: #1c1e21;
-        font-variant-numeric: tabular-nums;
-        transition: opacity 0.3s ease;
-      }
-      #main-display.idle {
-        opacity: 0.5;
-      }
-
-      #results-display {
-        font-size: clamp(1rem, 3vw, 1.1rem);
-        color: #333;
-        min-height: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .avg-time-display {
-        font-size: clamp(1rem, 4vw, 1.4rem);
-        font-weight: 500;
-        color: #3b5998;
-        margin-top: -5px;
-        margin-bottom: 10px;
-        min-height: 24px;
-        align-items: center;
-        justify-content: center;
-        display: none; /* Hidden by default */
-        flex-wrap: wrap;
-      }
-      .avg-time-display strong {
-        margin: 0 4px;
-        font-weight: 700;
-      }
-      #missed-hits-display {
-        color: #dc3545;
-        margin-left: 8px;
-      }
-
-      .hidden {
-        display: none !important;
-      }
-
-      /* --- FULLSCREEN GAME OVERLAY --- */
-      #game-overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #1c1c1e;
-        z-index: 9999;
-        display: none;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        box-sizing: border-box;
-        gap: 15px;
-      }
-
-      #game-overlay #main-display {
-        color: #fff;
-        flex-shrink: 0;
-        opacity: 1;
-      }
-      #game-overlay .avg-time-display {
-        color: #aeb8d0;
-        margin: -10px 0 0 0;
-      }
-      #game-overlay #missed-hits-display {
-        color: #ff3b30;
-      }
-      #game-overlay .trainer-grid {
-        width: 100%;
-        max-width: 500px;
-        display: grid;
-      }
-      #game-overlay #stop-btn {
-        width: 100%;
-        max-width: 410px;
-        flex-shrink: 0;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
     <div id="reaction-trainer-component">
