--- a/page-Vergleich.html
+++ b/page-Vergleich.html
@@ -19,10 +19,10 @@
     <link rel="manifest" href="manifest.json" data-pwa-version="set_in_manifest_and_pwa_js" />
 
     <!-- Favicon -->
-    <link href="app/icons/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="app/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="app/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-    <link href="app/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="app/icons/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="app/icons/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="app/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
+    <link href="app/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png" />
@@ -44,6 +44,9 @@
         <a href="#" data-toggle-theme class="header-icon header-icon-4"
           ><i class="fas fa-lightbulb"></i
         ></a>
+        <a href="#" data-menu="menu-settings" class="header-icon header-icon-3"
+          ><i class="fa fa-cog"></i
+        ></a>
       </div>
 
       <div id="footer-bar" class="footer-bar-1">
@@ -51,9 +54,11 @@
           ><i class="fa fa-chart-bar"></i><span>Vergleich</span></a
         >
         <a href="page-profile-finley.html"><i class="fa fa-futbol"></i><span>Training</span></a>
-        <a href="index.html"><i class="fa fa-home"></i><span>Home</span></a>
+        <a href="index.html"
+          ><i class="fa fa-home" style="font-size: 1.3em"></i><span>Home</span></a
+        >
         <a href="page-videos.html"><i class="fa fa-video"></i><span>Videos</span></a>
-        <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
+        <a href="page-tools.html"><i class="fa fa-tools"></i><span>Tools</span></a>
       </div>
 
       <div class="page-content header-clear-medium" style="padding-top: 80px">
