--- a/page-videos.html
+++ b/page-videos.html
@@ -44,14 +44,17 @@
       <a href="#" data-toggle-theme class="header-icon header-icon-4"
         ><i class="fas fa-lightbulb"></i
       ></a>
+      <a href="#" data-menu="menu-settings" class="header-icon header-icon-3"
+        ><i class="fa fa-cog"></i
+      ></a>
     </div>
 
     <div id="footer-bar" class="footer-bar-1">
       <a href="page-Vergleich.html"><i class="fa fa-chart-bar"></i><span>Vergleich</span></a>
       <a href="page-profile-finley.html"><i class="fa fa-futbol"></i><span>Training</span></a>
-      <a href="index.html"><i class="fa fa-home"></i><span>Home</span></a>
+      <a href="index.html"><i class="fa fa-home" style="font-size: 1.3em;"></i><span>Home</span></a>
       <a href="page-videos.html" class="active-nav"><i class="fa fa-video"></i><span>Videos</span></a>
-      <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
+      <a href="page-tools.html"><i class="fa fa-tools"></i><span>Tools</span></a>
     </div>
     <div class="page-content" style="padding-top: 80px;">
       <!-- Main Content Card -->
