Refactor code structure for improved readability and maintainability

--- a/page-tools.html
+++ b/page-tools.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="mobile-web-app-capable" content="yes" />
@@ -82,13 +81,15 @@
               </div>
 
               <div class="col-6">
-                <div class="card card-style m-0" data-card-height="150">
-                  <div class="card-center text-center">
-                    <i class="fa fa-clock color-green-dark" style="font-size: 2rem;"></i>
-                    <h6 class="font-600 mt-2 mb-1">Timer</h6>
-                    <p class="font-11 opacity-60 mb-0">Stoppuhr</p>
+                <a href="page-yoyo.html" class="text-decoration-none">
+                  <div class="card card-style m-0" data-card-height="150">
+                    <div class="card-center text-center">
+                      <i class="fa fa-stopwatch color-green-dark" style="font-size: 2rem;"></i>
+                      <h6 class="font-600 mt-2 mb-1">Yo-Yo</h6>
+                      <p class="font-11 opacity-60 mb-0">Fitness Test</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
 
               <!-- Row 2 -->
@@ -114,26 +115,7 @@
                 </a>
               </div>
 
-              <!-- Row 3 -->
-              <div class="col-6">
-                <div class="card card-style m-0" data-card-height="150">
-                  <div class="card-center text-center">
-                    <i class="fa fa-share-alt color-purple-dark" style="font-size: 2rem;"></i>
-                    <h6 class="font-600 mt-2 mb-1">Teilen</h6>
-                    <p class="font-11 opacity-60 mb-0">Export</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-6">
-                <div class="card card-style m-0" data-card-height="150">
-                  <div class="card-center text-center">
-                    <i class="fa fa-cogs color-orange-dark" style="font-size: 2rem;"></i>
-                    <h6 class="font-600 mt-2 mb-1">Einstellungen</h6>
-                    <p class="font-11 opacity-60 mb-0">Konfiguration</p>
-                  </div>
-                </div>
-              </div>
+              <!-- Row 3 removed -->
             </div>
           </div>
         </div>
