--- a/index.html
+++ b/index.html
@@ -219,17 +219,8 @@
        </i>
        F.C. Hertha 03 Zehlendorf e.V.
       </p>
-      <!-- Statistics Container -->
-      <div class="statistics-container" style="
-                margin-top: 10px;
-                width: 90%;
-                max-width: 420px;
-                margin-left: auto;
-                margin-right: auto;
-                font-size: 0.9rem;
-              ">
-       <!-- Statistics items will be populated by JavaScript -->
-      </div>
+      <!-- Statistics Container - Populated by js/statisticsAnimation.js -->
+     
      </div>
      <div class="card-overlay bg-gradient" style="z-index: 2">
      </div>
@@ -412,6 +403,8 @@
   </script>
   <script src="js/homePageHeroAnimations.js" type="module">
   </script>
+  <script src="js/statisticsAnimation.js" type="module">
+  </script>
   <!-- Background image rotation script -->
   <script>
    document.addEventListener('DOMContentLoaded', function () {
@@ -501,93 +494,8 @@
         animation: fadeInClubAnimation 2s ease-out forwards;
       }
 
-      /* Statistics Animation */
-      .statistic-item {
-        display: flex;
-        align-items: center;
-        padding: 5px 0;
-        color: white;
-        opacity: 0;
-        /* Overall item starts transparent, animated by JS for parts */
-        transition: opacity 0.3s ease-in-out;
-        min-height: 2.4em;
-      }
-
-      .statistic-item .stat-exercise-name,
-      .statistic-item .stat-result,
-      .statistic-item .stat-rating-container {
-        opacity: 0;
-        /* Parts start hidden, animated by JS classes */
-        white-space: nowrap;
-      }
-
-      .statistic-item .stat-exercise-name {
-        flex-basis: 35%;
-        flex-shrink: 0;
-        text-align: left;
-      }
-
-      .statistic-item .stat-result {
-        font-weight: 600;
-        flex-basis: 20%;
-        flex-shrink: 0;
-        text-align: right;
-      }
-
-      .animate-slide-in-left {
-        animation: slideInFromLeft 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
-      }
-
-      .animate-slide-in-right {
-        animation: slideInFromRight 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
-      }
-
-      @keyframes slideInFromLeft {
-        0% {
-          transform: translateX(-40px);
-          opacity: 0;
-        }
-
-        100% {
-          transform: translateX(0);
-          opacity: 1;
-        }
-      }
-
-      @keyframes slideInFromRight {
-        0% {
-          transform: translateX(40px);
-          opacity: 0;
-        }
-
-        100% {
-          transform: translateX(0);
-          opacity: 1;
-        }
-      }
-
-      /* Rating Label specific styles */
-      .stat-rating-container {
-        text-align: center;
-        flex-grow: 1;
-        flex-basis: 45%;
-      }
-
-      .stat-rating-text {
-        font-weight: bold;
-        padding: 4px 8px;
-        border-radius: 4px;
-        white-space: nowrap;
-        display: inline-block;
-        line-height: 1.3;
-        font-size: 0.85em;
-        text-transform: uppercase;
-      }
-
-      .label-ausgezeichnet {
-        background-color: rgba(40, 167, 69, 0.7);
-        color: white;
-      }
+      /* Statistics Animation - Moved to js/statisticsAnimation.js */
+      /* Styles for statistics animation are now injected via JavaScript in statisticsAnimation.js */
 
       .label-sehr-gut {
         background-color: rgba(23, 162, 184, 0.7);
@@ -637,45 +545,7 @@
         /* Opacity for animation will be handled by JS */
       }
 
-      /* Styling for the "Gesamtleistung" summary item */
-      .statistic-item-summary {
-        margin-top: 10px;
-        /* Extra space above the summary item */
-        /* You could add a subtle top border or background if desired */
-        /* border-top: 1px solid rgba(255,255,255,0.15); */
-        /* padding-top: 10px; */
-      }
-
-      .statistic-item-summary .stat-exercise-name {
-        font-size: 1.15em !important;
-        /* Noticeably larger */
-        font-weight: 700 !important;
-        /* Bolder */
-        flex-basis: 40% !important;
-        /* Adjust basis if needed for longer text */
-      }
-
-      .statistic-item-summary .stat-result {
-        font-size: 1.15em !important;
-        /* Noticeably larger */
-        font-weight: 700 !important;
-        /* Bolder */
-        flex-basis: 25% !important;
-        /* Adjust basis */
-      }
-
-      .statistic-item-summary .stat-rating-container {
-        flex-basis: 35% !important;
-        /* Adjust basis */
-      }
-
-      .statistic-item-summary .stat-rating-container .stat-rating-text {
-        font-size: 0.9em !important;
-        /* Slightly larger label */
-        font-weight: bold !important;
-        padding: 6px 12px !important;
-        /* More padding for emphasis */
-      }
+      /* Statistics summary styling moved to js/statisticsAnimation.js */
   </style>
  </body>
 </html>
