--- a/page-tools.html
+++ b/page-tools.html
@@ -71,13 +71,15 @@
             <div class="row gx-3 gy-3">
               <!-- Row 1 -->
               <div class="col-6">
-                <div class="card card-style m-0" data-card-height="150">
-                  <div class="card-center text-center">
-                    <i class="fa fa-calculator color-blue-dark" style="font-size: 2rem;"></i>
-                    <h6 class="font-600 mt-2 mb-1">Rechner</h6>
-                    <p class="font-11 opacity-60 mb-0">Berechnungen</p>
+                <a href="page-training.html" class="text-decoration-none">
+                  <div class="card card-style m-0" data-card-height="150">
+                    <div class="card-center text-center">
+                      <i class="fa fa-dumbbell color-blue-dark" style="font-size: 2rem;"></i>
+                      <h6 class="font-600 mt-2 mb-1">Training</h6>
+                      <p class="font-11 opacity-60 mb-0">Trainingsplan</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
 
               <div class="col-6">
