--- a/index.html
+++ b/index.html
@@ -215,12 +215,11 @@
        </span>
       </h1>
       <p class="color-white pt-2 pb-2 fade-in-club-name" style="opacity: 0;">
-       <i class="fa fa-futbol me-2">
-       </i>
-       F.C. Hertha 03 Zehlendorf e.V.
+        <i class="fa fa-futbol me-2"></i>
+        F.C. Hertha 03 Zehlendorf e.V.
       </p>
-      <!-- Statistics Container - Populated by js/statisticsAnimation.js -->
-     
+      <a id="ente-btn" href="page-tools.html" style="display:none; background:#007bff; color:#fff; font-weight:700; border-radius:1.5em; padding:0.8em 0; font-size:1.2em; margin-top:0.3em; box-shadow:0 2px 8px rgba(0,0,0,0.15); text-decoration:none; transition:background 0.2s; width:138px; margin-left:auto; margin-right:auto; display:block; text-align:center;" class="text-center">Enter</a>
+      <!-- <div class="statistics-container"></div> -->
      </div>
      <div class="card-overlay bg-gradient" style="z-index: 2">
      </div>
@@ -403,8 +402,7 @@
   </script>
   <script src="js/homePageHeroAnimations.js" type="module">
   </script>
-  <script src="js/statisticsAnimation.js" type="module">
-  </script>
+  <!-- <script src="js/statisticsAnimation.js" type="module"></script> -->
   <!-- Background image rotation script -->
   <script>
    document.addEventListener('DOMContentLoaded', function () {
